@@ -275,14 +275,15 @@ serd_strlen(const char* SERD_NONNULL     str,
 /**
    Parse a string to a double.
 
-   The API of this function is identical to the standard C strtod function,
+   The API of this function is similar to the standard C strtod function,
    except this function is locale-independent and always matches the lexical
-   format used in the Turtle grammar (the decimal point is always ".").
+   format used in the Turtle grammar (the decimal point is always ".").  The
+   end parameter is an offset from the start of `str` to avoid the
+   const-correctness issues of the strtod API.
 */
 SERD_API
 double
-serd_strtod(const char* SERD_NONNULL str,
-            char* SERD_NONNULL* SERD_NULLABLE endptr);
+serd_strtod(const char* SERD_NONNULL str, size_t* SERD_NULLABLE end);
 
 /**
    Decode a base64 string.
